<resources>
    <string name="app_name">Canary</string>
    <string name="scanQr">Scan QR</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="by_score">By Score</string>
    <string name="by_qr_scanned">By QR Scanned</string>
    <string name="by_highest_scoring_qr">By Highest Scoring QR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_qr">AddQrActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="qr_exists_message">The added QR code was scanned previously</string>
    <string name="qr_exists_title">QR Already Exists</string>
    <string name="welcome_to_canary">Welcome to Canary</string>
    <string name="create_profile">Create Profile</string>
    <string name="username_create_profile">Username*</string>
    <string name="first_name_create_profile">First Name*</string>
    <string name="last_name_create_profile">Last Name*</string>
    <string name="contact_create_profile">Contact*</string>
    <string name="view_other_players">View Other Players</string>
    <string name="blank">_ _ _</string>
    <string name="snapshot">Snapshot</string>
    <string name="score">Score</string>
    <string name="qrs_scanned">QRs Scanned</string>
    <string name="highest_qr">Highest QR</string>
    <string name="lowest_qr">Lowest QR</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Intent extras -->
    <string name="intent_qr_code">qr_code</string>

    <string name="intent_qr_name">qr_name</string>
    <string name="intent_qr_hash">qr_hash</string>
    <string name="intent_qr_location">qr_location</string>
    <string name="intent_qr_score">qr_score</string>

    <string name="intent_qr_map">intent_qr</string>


    <string name="intent_recycler_list_map">intent_recycler_list_map</string>

    <string name="intent_user_locations_map">intent_user_locations_map</string>
    <string name="intent_location_map">intent_location_map</string>
    <string name="intent_user_map">intent_user_map</string>


    <!--Map dropdown search ranges-->
    <string name = "search_range">Search Range</string>

    <string name="search_range_200m">200 m</string>
    <string name="search_range_500m">500 m</string>
    <string name="search_range_1km">1 km</string>
    <string name="search_range_2km">2 km</string>
    <string name="search_range_5km">5 km</string>
    <string name="search_range_nolim">N0 LIMIT</string>
    <string-array name="search_range_array">
        <item>@string/search_range_200m</item>
        <item>@string/search_range_500m</item>
        <item>@string/search_range_1km</item>
        <item>@string/search_range_2km</item>
        <item>@string/search_range_5km</item>
        <item>@string/search_range_nolim</item>
    </string-array>

    <!--Speakable text-->
    <string name="speakable_map">This is a Google Map That will run when you enter permissions</string>
    <string name="speakable_map_image">When pressed change the size of the google map</string>

</resources>