<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.LeaderboardFragment"
    android:orientation="vertical"
    android:background="@color/light_blue"
    android:paddingTop="32dp">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_canary"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/createProfileLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/createProfileLayout"
        android:layout_width="411dp"
        android:layout_height="557dp"
        android:layout_marginTop="84dp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="165dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/create_profile"
            android:textColor="@color/dark_gray"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameEditView"
            android:layout_width="316dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="Enter Username"
            android:maxLength="25"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.252"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="91dp"
            android:layout_height="21dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="180dp"
            android:paddingLeft="5dp"
            android:text="@string/first_name_create_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstNameEditView"
            android:layout_width="325dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="Enter First Name"
            android:maxLength="25"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditView" />

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_width="91dp"
            android:layout_height="21dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="268dp"
            android:paddingLeft="5dp"
            android:text="@string/last_name_create_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lastNameEditView"
            android:layout_width="325dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="Enter Last Name"
            android:maxLength="25"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditView" />

        <TextView
            android:id="@+id/contactTextView"
            android:layout_width="91dp"
            android:layout_height="21dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="344dp"
            android:paddingLeft="5dp"
            android:text="@string/contact_create_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/contactEditView"
            android:layout_width="325dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_input"
            android:digits="0123456789"
            android:ems="10"
            android:hint="Enter Contact Number"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameEditView" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:text="SAVE"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="91dp"
            android:layout_height="21dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:paddingLeft="5dp"
            android:text="@string/username_create_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>